--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,15 +4,25 @@
 </div>
 
 <script id="category-list-tpl" type="text/x-handlebars-template">
+    {{!-- before context-parser-handlebars:
     <ul id="category-list" class="nav nav-pills nav-stacked">
         <li data-catid="0"><a href="/" class="xhr-enable">All</a></li>
         \{{#each categories}}
         <li data-catid="\{{catid}}"><a href="/\{{catid}}" class="xhr-enable">\{{name}}</a></li>
         \{{/each}}
     </ul>
+    --}}
+
+    <ul id="category-list" class="nav nav-pills nav-stacked">
+        <li data-catid="0"><a href="/" class="xhr-enable">All</a></li>
+        \{{#each categories}}
+        <li data-catid="\{{{yavd catid}}}"><a href="/\{{{yavd (yu catid)}}}" class="xhr-enable">\{{{yd name}}}</a></li>
+        \{{/each}}
+    </ul>
 </script>
 
 <script id="product-list-tpl" type="text/x-handlebars-template">
+    {{!-- before context-parser-handlebars:
     <ol id="navigation-menu" class="breadcrumb">
         <li><a href="/" class="xhr-enable">Home</a></li>
         \{{#if isInCategory}}
@@ -70,9 +80,69 @@
             \{{/if}}
         </ul>
     </nav>
+    --}}
+
+    <ol id="navigation-menu" class="breadcrumb">
+        <li><a href="/" class="xhr-enable">Home</a></li>
+        \{{#if isInCategory}}
+        <li class="active">\{{{yd categoryName}}}</li>
+        \{{/if}}
+    </ol>
+
+    <ul class="product-list">
+        \{{#each products}}
+        <li>
+            <div class="product-list-image">
+                <a href="/\{{{yavd (yu catid)}}}/\{{{yavd (yu pid)}}}" class="xhr-enable"><img src="/images/products/\{{{yavd (yu image)}}}" /></a>
+            </div>
+            <div class="product-list-info">
+                <div class="product-list-name"><a href="/\{{{yavd (yu catid)}}}/\{{{yavd (yu pid)}}}" class="xhr-enable">\{{{yd name}}}</a></div>
+                $\{{{yd price}}}
+                <button type="button" class="btn btn-sm btn-primary" name="addToCart" data-pid="\{{{yavd pid}}}">Add</button>
+            </div>
+        </li>
+        \{{/each}}
+        \{{#if isEmptyCategory}}
+            <div class="alert alert-warning alert-dismissible" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                Sorry, no product in this category.
+            </div>
+        \{{/if}}
+    </ul>
+
+    <nav class="text-center">
+        <ul class="pagination">
+            \{{#if isFirstPage}}
+            <li class="disabled"><span aria-hidden="true">&laquo;</span></li>
+            \{{else}}
+            <li>
+                <a href="/\{{{yavd (yu catid)}}}/page/\{{{yavd (yu prevPage)}}}" aria-label="Previous" class="xhr-enable">
+                    <span aria-hidden="true">&laquo;</span>
+                </a>
+            </li>
+            \{{/if}}
+            \{{#each pages}}
+                \{{#if current}}
+                <li class="active"><a href="/\{{{yavd (yu catid)}}}/page/\{{{yavd (yu page)}}}" class="xhr-enable">\{{{yd page}}}</a></li>
+                \{{else}}
+                <li><a href="/\{{{yavd (yu catid)}}}/page/\{{{yavd (yu page)}}}" class="xhr-enable">\{{{yd page}}}</a></li>
+                \{{/if}}
+            \{{/each}}
+            \{{#if isLastPage}}
+            <li class="disabled"><span aria-hidden="true">&raquo;</span></li>
+            \{{else}}
+            <li>
+                <a href="/\{{{yavd (yu catid)}}}/page/\{{{yavd (yu nextPage)}}}" aria-label="Next" class="xhr-enable">
+                    <span aria-hidden="true">&raquo;</span>
+                </a>
+            </li>
+            \{{/if}}
+        </ul>
+    </nav>
 </script>
 
 <script id="product-detail-tpl" type="text/x-handlebars-template">
+    {{!-- before context-parser-handlebars:
     <ol id="navigation-menu" class="breadcrumb">
         <li><a href="/" class="xhr-enable">Home</a></li>
         <li><a href="/\{{catid}}" class="xhr-enable">\{{categoryName}}</a></li>
@@ -90,9 +160,35 @@
         </h4>
         <article>\{{productDescription}}</article>
     </section>
+    --}}
+
+    <ol id="navigation-menu" class="breadcrumb">
+        <li><a href="/" class="xhr-enable">Home</a></li>
+        <li><a href="/\{{{yavd (yu catid)}}}" class="xhr-enable">\{{{yd categoryName}}}</a></li>
+        <li class="active">\{{{yd productName}}}</li>
+    </ol>
+
+    <section class="product-detail-image">
+        <img src="/images/products/\{{{yavd (yu productImage)}}}" />
+    </section>
+    <section class="product-detail-description">
+        <h2>\{{{yd productName}}}</h2>
+        <h4>
+            $\{{{yd productPrice}}}
+            <button type="button" class="btn btn-sm btn-primary" name="addToCart" data-pid="\{{{yavd productId}}}">Add</button>
+        </h4>
+        <article>\{{{yd productDescription}}}</article>
+    </section>
 </script>
 
 <script id="error-message-tpl" type="text/x-handlebars-template">
+    {{!-- before context-parser-handlebars:
+    <div class="alert alert-danger alert-dismissible" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        \{{{message}}}
+    </div>
+    --}}
+
     <div class="alert alert-danger alert-dismissible" role="alert">
         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         \{{{message}}}
