--- a/views/admin-products.handlebars
+++ b/views/admin-products.handlebars
@@ -29,13 +29,21 @@
 </div>
 
 <script id="category-list-tpl" type="text/x-handlebars-template">
+    {{!-- before context-parser-handlebars:
     <option value="">Please select a category</option>
     \{{#categories}}
     <option value="\{{catid}}">\{{name}}</option>
     \{{/categories}}
+    --}}
+
+    <option value="">Please select a category</option>
+    \{{#categories}}
+    <option value="\{{{yavd catid}}}">\{{{yd name}}}</option>
+    \{{/categories}}
 </script>
 
 <script id="product-list-tpl" type="text/x-handlebars-template">
+    {{!-- before context-parser-handlebars:
     <div class="panel-body new-product">
         Add Product in this category
     </div>
@@ -44,6 +52,18 @@
             <img src="/images/products/\{{pid}}.\{{image_extension}}" class="img-thumbnail pull-left" />
             <h4>\{{name}}</h4>
             <h5>$\{{price}}</h5>
+        </div>
+    \{{/products}}
+    --}}
+
+    <div class="panel-body new-product">
+        Add Product in this category
+    </div>
+    \{{#products}}
+        <div class="panel-body" data-pid="\{{{yavd pid}}}">
+            <img src="/images/products/\{{{yavd (yu pid)}}}.\{{{yavd (yu image_extension)}}}" class="img-thumbnail pull-left" />
+            <h4>\{{{yd name}}}</h4>
+            <h5>$\{{{yd price}}}</h5>
         </div>
     \{{/products}}
 </script>
@@ -101,6 +121,7 @@
 </script>
 
 <script id="edit-product-form-tpl" type="text/x-handlebars-template">
+    {{!-- before context-parser-handlebars:
     <div class="panel panel-info">
         <div class="panel-heading">
             <h3 class="panel-title">Edit Product</h3>
@@ -156,15 +177,81 @@
             </form>
         </div>
     </div>
+    --}}
+
+    <div class="panel panel-info">
+        <div class="panel-heading">
+            <h3 class="panel-title">Edit Product</h3>
+        </div>
+        <div class="panel-body">
+            <form class="form-horizontal" action="/admin/api/prod/\{{{yavd (yu pid)}}}/edit" method="POST" enctype="multipart/form-data" data-pid="\{{{yavd pid}}}">
+                <div class="form-group">
+                    <label for="edit-product-name" class="col-sm-2 control-label">Name</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" id="edit-product-name" name="name" value="\{{{yavd name}}}" required pattern="^[\w- ']+$" />
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="edit-product-category-id" class="col-sm-2 control-label">Category</label>
+                    <div class="col-sm-10">
+                        <select id="edit-product-category-id" name="catid" required class="form-control">
+                            <option value="">Please select a category</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="control-label col-sm-2" for="edit-product-price">Price</label>
+                    <div class="col-sm-10">
+                        <div class="input-group">
+                            <span class="input-group-addon">$</span>
+                            <input type="number" class="form-control" id="edit-product-price" name="price" step="0.01" min="0.00" required pattern="^\d+(?:\.\d{1,2})?$" value="\{{{yavd price}}}" />
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="control-label col-sm-2" for="edit-product-description">Description</label>
+                    <div class="col-sm-10">
+                        <textarea class="form-control" id="edit-product-description" name="description" pattern="^[\w- ',\r\n]+$">\{{{yd description}}}</textarea>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="control-label col-sm-2" for="edit-product-photo">Photo</label>
+                    <div class="col-sm-5">
+                        <h5>Upload image to replace:</h5>
+                        <input type="file" id="edit-product-photo" name="photo">
+                    </div>
+                    <div class="col-sm-5">
+                        <h5>Current:</h5>
+                        <img src="/images/products/\{{{yavd (yu pid)}}}.\{{{yavd (yu image_extension)}}}" class="img-thumbnail" />
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-offset-2 col-sm-10">
+                        <button type="button" id="edit-product-submit" class="btn btn-primary">Update</button>
+                        <button type="button" id="edit-product-delete" class="btn btn-danger pull-right">Delete Product</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
 </script>
 
 <script id="warn-invalid-form-tpl" type="text/x-handlebars-template">
-<p>The following fields are invalid:</p>
-<ul>
-    \{{#fields}}
-    <li>\{{.}}</li>
-    \{{/fields}}
-</ul>
+    {{!-- before context-parser-handlebars:
+    <p>The following fields are invalid:</p>
+    <ul>
+        \{{#fields}}
+        <li>\{{.}}</li>
+        \{{/fields}}
+    </ul>
+    --}}
+
+    <p>The following fields are invalid:</p>
+    <ul>
+        \{{#fields}}
+        <li>\{{{yd .}}}</li>
+        \{{/fields}}
+    </ul>
 </script>
 
 <script id="success-message-tpl" type="text/x-handlebars-template">
